--- a/packages/comps/package.json
+++ b/packages/comps/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "comps",
-  "version": "0.0.1",
+  "name": "@jimu/comps",
+  "version": "0.0.1-dev-1",
   "description": "components",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "typings": "typings/global/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "lib",
+    "es"
+  ],
   "author": "NoSuitableOne@github.com",
   "license": "ISC",
   "peerDependencies": {
@@ -22,5 +27,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.2.4"
+  },
+  "keywords": [
+    "@jimu/comps",
+    "react-components"
+  ],
+  "homepage": "",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "publishConfig": {
+    "registry": "http://192.168.150.59:8081/repository/npm-group1/"
   }
 }
