--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "hooks",
-  "version": "0.0.1",
+  "name": "@jimu/hooks",
+  "version": "0.0.1-dev-1",
   "description": "hooks组件",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,5 +24,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.2.4"
+  },
+  "homepage": "",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib",
+    "es"
+  ],
+  "publishConfig": {
+    "registry": "http://192.168.150.59:8081/repository/npm-group1/"
   }
 }
