修改 publish registry配置

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "version": "0.0.1",
   "main": "index.js",
-  "author": "mayx <mayuxiang@ewell.cc>",
+  "author": "NoSuitableOne@github.com",
   "license": "MIT"
 }
