--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimu/hooks",
-  "version": "0.0.1-dev-1.0",
+  "version": "0.0.1-dev-1",
   "description": "hooks组件",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -35,7 +35,8 @@
     "es"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
-  "gitHead": "2fbf99e15d668e173d6d6cce4adac4cd05e0297e"
+  "gitHead": "3eb540263898a094bb6c6f7a1c2abe3f5cfa99f0"
 }
