--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jimu/hooks",
-  "version": "0.0.1-dev-1.1",
+  "name": "@budlocks/hooks",
+  "version": "0.0.1-dev-1",
   "description": "hooks组件",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -25,7 +25,7 @@
     "react-dom": "^17.0.2",
     "typescript": "^4.2.4"
   },
-  "homepage": "",
+  "homepage": "https://github.com/NoSuitableOne/jimu#readme",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -38,5 +38,11 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
-  "gitHead": "3eb540263898a094bb6c6f7a1c2abe3f5cfa99f0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NoSuitableOne/jimu.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NoSuitableOne/jimu/issues"
+  }
 }
