--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jimu",
   "private": true,
   "scripts": {
-    "start": "",
+    "start": "dumi dev",
     "build": "father-build",
     "publish": "lerna publish"
   },
@@ -14,16 +14,15 @@
     "url": "git@github.com:NoSuitableOne/jimu.git"
   },
   "devDependencies": {
+    "dumi": "^1.1.14",
     "father-build": "^1.19.4",
-    "lerna": "^3.22.1",
-    "umi": "^2.13.17",
-    "umi-test": "^1.9.6",
-    "umi-tools": "^0.4.0"
+    "lerna": "^3.22.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "antd": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
+    "father": "^2.30.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "typescript": "^4.2.4"
