--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "dumi dev",
     "build": "father-build",
-    "publish": "lerna publish"
+    "publish": "lerna publish",
+    "precommit": "lint-staged"
   },
   "workspaces": [
     "packages/*"
@@ -14,15 +15,25 @@
     "url": "git@github.com:NoSuitableOne/jimu.git"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.22",
+    "@types/testing-library__react": "^10.2.0",
     "dumi": "^1.1.14",
+    "eslint": "^7.24.0",
+    "father": "^2.30.4",
     "father-build": "^1.19.4",
-    "lerna": "^3.22.1"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "lerna": "^3.22.1",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "antd": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
-    "father": "^2.30.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "typescript": "^4.2.4"
@@ -30,5 +41,16 @@
   "version": "0.0.1",
   "main": "index.js",
   "author": "NoSuitableOne@github.com",
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix src/**/*.{ts,tsx}",
+      "jest --bail --coverage --findRelatedTests",
+      "git add ."
+    ],
+    "*.{md,css,html,less}": [
+      "prettier --write",
+      "git add ."
+    ]
+  },
   "license": "MIT"
 }
