--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "jimu",
+  "name": "budlocks",
   "private": true,
   "scripts": {
     "start": "dumi dev",
     "build": "father-build",
     "publish": "lerna publish",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "jest --no-cache",
+    "test:coverage": "lerna workspaces run test:coverage",
+    "test:watch": "lerna workspaces run test:watch",
+    "test:update": "lerna workspaces run test:update"
   },
   "workspaces": [
     "packages/*"
@@ -15,22 +19,30 @@
     "url": "git@github.com:NoSuitableOne/jimu.git"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.22",
     "@types/testing-library__react": "^10.2.0",
+    "babel-jest": "^26.6.3",
     "dumi": "^1.1.14",
     "eslint": "^7.24.0",
     "father": "^2.30.4",
     "father-build": "^1.19.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-environment-jsdom": "^26.6.2",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.5"
   },
   "dependencies": {
+    "@babel/register": "^7.13.16",
     "@babel/runtime": "^7.13.10",
     "antd": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
@@ -41,16 +53,5 @@
   "version": "0.0.1",
   "main": "index.js",
   "author": "NoSuitableOne@github.com",
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint --fix src/**/*.{ts,tsx}",
-      "jest --bail --coverage --findRelatedTests",
-      "git add ."
-    ],
-    "*.{md,css,html,less}": [
-      "prettier --write",
-      "git add ."
-    ]
-  },
   "license": "MIT"
 }
