--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -22,7 +22,9 @@ jobs:
         run: npm install yarn
       # run yarn install to install dependencies
       - name: Install dependencies
-        run: yarn install
+        run: yarn
+      - name: Test
+        run: yarn test
   test: # 测试任务
     needs: install
     strategy:
