--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: ["12"]
-    name: install ${{ matrix.os }} ${{ matrix.node }}
+    name: install 
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -24,18 +24,16 @@ jobs:
       # run yarn install to install dependencies
       - name: Install dependencies
         run: yarn
-      - name: Test
-        run: yarn test
   test: # 测试任务
     needs: install
     strategy:
       matrix:
         os: [ubuntu-latest]
         node: ["12"]
-    name: test ${{ matrix.os }} ${{ matrix.node }}
+    name: test
     runs-on: ${{ matrix.os }}
     steps:
-      - name: test
-        run: ls -l
+      - name: Test
+        run: yarn test
   
   
