--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -104,11 +104,15 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - name: Merge master branch
+        uses: devmasx/merge-branch@v1.3.1
+        with:
+          type: now
+          target_branch: uat
+          github_token: ${{ github.token }}
       - name: Lerna publish
         run: |
-          find ./packages/ -type d -maxdepth 1 -exec cp LICENSE {} \;
-          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-          npx lerna publish from-package --no-verify-access --yes
+          lerna publish from-package --no-verify-access --yes
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
