--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,8 @@
     "publish": {
       "allowBranch": "master",
       "conventionalCommits": true,
-      "exact": true
+      "exact": true,
+      "verifyAccess": false
     }
   }
 }
