--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@babel/register": "^7.13.16",
     "@babel/runtime": "^7.13.10",
+    "@changesets/cli": "^2.16.0",
     "antd": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
     "react": "^16.14.0",
