--- a/packages/comps/package.json
+++ b/packages/comps/package.json
@@ -15,7 +15,8 @@
     "build": "yarn run build:cjs && yarn run build:esm && yarn run build:style",
     "build:cjs": "babel src --out-dir ./babels/lib --root-mode upward -x '.ts,.tsx'",
     "build:esm": "BABEL_ENV=esm babel src --out-dir ./babels/es --root-mode upward -x '.ts,.tsx'",
-    "build:style": "gulp style"
+    "build:style": "gulp style",
+    "add": "TS_NODE_PROJECT='./plop.tsconfig.json' plop --plopfile plopfile.ts"
   },
   "peerDependencies": {
     "antd": ">=4",
@@ -49,9 +50,11 @@
     "gulp-sourcemaps": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "plop": "^2.7.4",
     "postcss-selector-prefixer": "^1.0.2",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.5.5"
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1"
   },
   "keywords": [
     "@budlocks/comps",
