--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -62,7 +62,9 @@
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "plop": "^2.7.4",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.5.5"
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1"
   }
 }
